fix(web-rewards): :lipstick: remove align borders sections user profile page

--- a/apps/web-rewards/src/app/user/id/page.module.css
+++ b/apps/web-rewards/src/app/user/id/page.module.css
@@ -22,9 +22,7 @@
 }
 
 .borders-section {
-  align-items: center;
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   width: fit-content;
 }
